[gd_scene load_steps=5 format=3 uid="uid://cxnmkvh5273r6"]

[ext_resource type="Script" path="res://Statistics/StatisticsFilterSelection/TimeFilter.gd" id="1_hvm7b"]
[ext_resource type="Texture2D" uid="uid://cqcxj3c0k77p" path="res://addons/calendar_button/btn_img/btn_32x32_03.png" id="2_g1bew"]
[ext_resource type="Texture2D" uid="uid://b146xrhbpdtf8" path="res://addons/calendar_button/btn_img/btn_32x32_04.png" id="3_oepub"]
[ext_resource type="Script" path="res://addons/calendar_button/scripts/calendar_script.gd" id="4_snqp3"]

[node name="TimeFilter" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_hvm7b")

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "<title>"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="CalendarButton" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
texture_normal = ExtResource("2_g1bew")
texture_pressed = ExtResource("3_oepub")
script = ExtResource("4_snqp3")

[node name="DateLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "DD-MM-YYYY"
horizontal_alignment = 2

[connection signal="date_selected" from="HBoxContainer/CalendarButton" to="." method="_date_selected"]
